--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,5 +4,6 @@
         <!-- Customize your dark theme here. -->
          <item name="colorPrimary">@color/primary_green</item>
         <item name="colorPrimaryVariant">@color/darker_blue</item>
+        <item name="android:colorBackground">@color/background_blue</item>
     </style>
 </resources>
